--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -1,14 +1,12 @@
 .formContainer {
-  width: 450px;
+  width: 100%;
   text-align: left;
   padding: 2rem;
-  position: relative;
-  margin-top: -390px;
-  left: 55%;
-  bottom: 10rem;
+  position: absolute;
+  left: 0;
+
   font-size: 12px;
   background-color: #15191C;
-  border-radius: 10%;
 }
 
 .formContainer p {
@@ -17,17 +15,19 @@
 }
 
 .button {
-  width: 200px;
+  width: 100%;
   background-color: gold;
   color: black;
   border: none;
   border-radius: 1rem;
+  height: 45px;
 
 }
 
 .email {
   margin-bottom: 1rem;
-  width: 50%;
+  width: 100%;
+  height: 35px;
   border-radius: 25px;
   padding-left: 1rem;
   border: none;
@@ -35,10 +35,20 @@
 
 .message {
   resize: none;
-  height: 120px;
+  height: 180px;
   width: 100%;
   margin-bottom: 1rem;
   border-radius: 25px;
   padding: 1rem;
   border : none;
+}
+
+@media screen and (min-width:768px) {
+  .formContainer {
+    width: 75%;
+    border-radius: 1rem;
+    position: relative;
+    margin: 0 auto;
+
+  }
 }
