--- a/src/pages/app.css
+++ b/src/pages/app.css
@@ -6,12 +6,19 @@ html, body {
 .section {
   text-align: center;
   padding-bottom: 4rem;
-  height: 100vh;
-  overflow: none;
+  /*height: 150vh;*/
+  /*overflow: hidden;*/
   padding-right: 8rem;
-
+  overflow-x: hidden;
 
 }
+
+.main-logo{
+  /*width: 80%;*/
+  transform: scale(0.5);
+}
+
+
 
 .section-homepage {
   position: relative;
@@ -21,6 +28,8 @@ html, body {
   padding-top: 5rem;
   /*grid-template-columns: 90% auto;
   grid-template-rows: 100%;*/
+  /*height: 145vh;*/
+  overflow: hidden;
 
 }
 
@@ -28,19 +37,23 @@ html, body {
 .section-side-image {
   position: absolute;
   transform : scale(0.8);
-
+  display: none;
   top: 60px;
   right: -120px;
 }
 
 .section-body {
   text-align: center;
-  padding-right : 2rem;
+  /*padding-right : 2rem;*/
 }
 
 .tagline {
   width: 100%;
-  font-size: 14px;
+  /*font-size: 12px;*/
+}
+
+.tagline h1 {
+    font-size: 20px;
 }
 
 .tagline h3 {
@@ -48,20 +61,27 @@ html, body {
 
 }
 
-.introduction {
-  padding-bottom: 3rem;
+.introduction-text {
+  padding-bottom: 2rem;
+  width: 100%;
+  margin: 0 auto;
+  color: white;
 }
 
-
+.introduction-text {
+  padding-bottom: 3rem;
+  font-size: 12px;
+}
 
 .submit-email {
   display: flex;
   flex-direction: row;
   height: auto;
-  border-bottom: 1px solid grey;
-  width: 40%;
+  border-bottom: 2px solid grey;
+  /*width: 40%;*/
   margin : 0 auto;
   color : white;
+  /*padding-bottom: 1rem;*/
 }
 
 .submit-email-label {
@@ -69,11 +89,14 @@ html, body {
   padding-right: 0.5rem;
   font-size: 14px;
   margin-top: 1rem;
+  padding-bottom: 1rem;
+  display: none;
 }
 
 .submit-email-arrow {
   padding-right: 2rem;
   margin-top: 1rem;
+  display: none;
 }
 
 .submit-email-icon {
@@ -82,15 +105,17 @@ html, body {
 
   margin-top: 3rem;
   position: absolute;
+  display: none;
 
 }
 
 .submit-email-form {
-  width: 460px;
+  width: 100%;
   background-color: transparent;
   border: none;
-  padding-left: 2rem;
+  /*padding-left: 2rem;*/
   color: white;
+  padding-bottom: 1rem;
 }
 
 .section-logo {
@@ -98,13 +123,16 @@ html, body {
 }
 
 .let-me-know-button {
-  background-color: transparent;
-  height: auto;
-  border: none;
-  padding-top: 2rem;
-  padding-bottom: 4rem;
-
-  width: 40%;
+  background-color: gold;
+  height: 30px;
+  border-color: gold;
+  border-radius: 1rem;
+  font-size: 12px;
+  /*padding-top: 2rem;*/
+  /*padding-bottom: 4rem;*/
+  margin-top: 1rem;
+  width: 100%;
+  margin-bottom: 1.5rem;
 }
 
 .store-buttons {
@@ -116,20 +144,163 @@ html, body {
 }
 
 
-.introduction {
-  width: 100%;
-}
 
-.introduction-text {
-  font-size: 20px;
-  padding-bottom: 2rem;
-  width: 50%;
-
-  margin: 0 auto;
-  color: white;
-
-}
 
 .main {
     overflow: scroll;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    text-align: center;
+    padding-bottom: 4rem;
+    /*height: 100vh;*/
+    overflow: none;
+    padding-right: 8rem;
+
+
+  }
+
+  .section-homepage {
+    position: relative;
+    width: 100%;
+    overflow-x: hidden;
+
+    padding-top: 5rem;
+    /*grid-template-columns: 90% auto;
+    grid-template-rows: 100%;*/
+
+  }
+
+
+  .section-side-image {
+    /*position: absolute;*/
+    /*transform : scale(0.8);*/
+
+    /*top: 60px;*/
+    /*right: -120px;*/
+  }
+
+  .section-body {
+    text-align: center;
+    padding-right : 2rem;
+  }
+
+  .tagline {
+    width: 100%;
+    font-size: 14px;
+  }
+
+  .tagline h3 {
+    color: gold;
+
+  }
+
+  .introduction {
+    padding-bottom: 3rem;
+  }
+
+
+  .submit-email {
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    border-bottom: 1px solid grey;
+    width: 40%;
+    margin : 0 auto;
+    color : white;
+  }
+
+  .submit-email-label {
+    margin-left: -12rem;
+    padding-right: 0.5rem;
+    font-size: 14px;
+    margin-top: 1rem;
+  }
+
+  .submit-email-arrow {
+    padding-right: 2rem;
+    margin-top: 1rem;
+  }
+
+  .submit-email-icon {
+    width: 22px;
+    height: 18px;
+
+    margin-top: 3rem;
+    position: absolute;
+
+  }
+
+  .submit-email-form {
+    width: 460px;
+    background-color: transparent;
+    border: none;
+    padding-left: 2rem;
+    color: white;
+  }
+
+  .section-logo {
+    transform: scale(0.5)
+  }
+
+
+
+  .store-buttons {
+    border-top: 1px solid grey;
+    padding-top: 1rem;
+    width: 80%;
+    margin: 0 auto;
+
+  }
+
+
+  .introduction {
+    width: 100%;
+  }
+
+  .introduction-text {
+    padding-bottom: 2rem;
+    width: 50%;
+    margin: 0 auto;
+    color: white;
+    font-size: 1rem;
+
+  }
+
+  .let-me-know-button {
+    background-color: gold;
+    height: 30px;
+    border-color: gold;
+    border-radius: 1rem;
+    font-size: 12px;
+    /*padding-top: 2rem;*/
+    /*padding-bottom: 4rem;*/
+    margin-top: 1rem;
+    width: 250px;
+    margin-bottom: 1.5rem;
+  }
+
+  .main {
+      overflow: scroll;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .section-side-image {
+    display: block;
+    /*position: ;*/
+    position: absolute;
+    transform : scale(0.9);
+
+    top: 60px;
+    right: 150px;
+
+  }
+  .section {
+    padding-right: 12rem;
+
+  }
+
+
 }
