--- a/src/pages/termsOfUse/termsOfUse.module.css
+++ b/src/pages/termsOfUse/termsOfUse.module.css
@@ -1,14 +1,73 @@
+.title {
+  font-size: 20px;
+}
+
 .textBox p {
-  font-size: 14px;
+  font-size: 12px;
   text-align: left;
   color: white;
   border-bottom: 1px solid gray;
-  padding-right: 5rem;
+  /*padding-right: 5rem;*/
+
+
 }
+
+.textBox {
+  width: 100%;
+  height: 300px;
+  overflow-y: scroll;
+  padding-bottom: 1rem;
+}
+
+
 
 .carouselControls {
   display: flex;
-  //flex-direction: row;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
+  color: white;
+  padding: 1rem;
+  margin-top: 1rem;
+
+
+}
+
+.carouselControls p {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+@media screen and (min-width: 425px) {
+  .textBox p {
+    font-size: 14px;
+    text-align: left;
+    color: white;
+    border-bottom: 1px solid gray;
+    padding-right: 5rem;
+    padding: 1rem;
+
+  }
+
+  .textBox {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+
+
+  .carouselControls {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    /*padding: 1rem;*/
+    /*width: 100%;*/
+  }
+
+  .carouselControls p {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
