--- a/src/pages/termsOfUse/termsOfUse.module.css
+++ b/src/pages/termsOfUse/termsOfUse.module.css
@@ -71,3 +71,28 @@
     padding-right: 1rem;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .textBox {
+    width: 100%;
+    height: 600px;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+}
+@media screen and (min-width: 1444px) {
+  .textBox {
+    width: 100%;
+    height: 600px;
+  }
+
+  .title {
+    font-size: 2rem;
+  }
+
+  .carouselControls {
+    padding-bottom: 6rem;
+  }
+}
