--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   text-align: left;
   padding: 2rem;
+
   position: absolute;
   left: 0;
 
@@ -25,7 +26,7 @@
 }
 
 .email {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   width: 100%;
   height: 35px;
   border-radius: 25px;
@@ -38,8 +39,10 @@
   height: 180px;
   width: 100%;
   margin-bottom: 1rem;
-  border-radius: 25px;
-  padding: 1rem;
+  border-radius: 15px;
+  /*padding: 1rem;*/
+  padding-top: 0.5rem;
+  padding-left: 1rem;
   border : none;
 }
 
@@ -49,6 +52,35 @@
     border-radius: 1rem;
     position: relative;
     margin: 0 auto;
+  }
+}
 
+@media screen and (min-width: 1024px) {
+    .formContainer {
+      margin-top: -34rem;
+      margin-left: 15rem;
+      width: 500px;
+      margin-bottom: 0px;
+    }
+
+    .email {
+      width: 50%;
+      height: 28px;
+    }
+    .message {
+      height: 120px;
+      width: 80%;
+    }
+    .button {
+      width: 50%;
+      height: 28px;
+    }
+}
+@media screen and (min-width: 1444px) {
+  .formContainer {
+    margin-top: -34rem;
+    margin-left: 70%;
+    width: 500px;
+    margin-bottom: 0px;
   }
 }
