--- a/src/layouts/layouts.module.css
+++ b/src/layouts/layouts.module.css
@@ -95,7 +95,7 @@ li:hover {
   padding-top: 1rem;
 }
 
-@media screen and (min-height: 768px) {
+@media screen and (min-width: 768px) {
   .navbar {
     color: white;
     position: fixed;
@@ -195,8 +195,8 @@ li:hover {
   }
 }
 
-@media screen and (min-height: 1024px) {
+@media screen and (min-width: 1024px) {
   .navbar{
-    
+
   }
 }
