--- a/src/pages/app.css
+++ b/src/pages/app.css
@@ -9,7 +9,7 @@ html, body {
   /*height: 150vh;*/
   /*overflow: hidden;*/
   padding-right: 8rem;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
 
 }
 
@@ -113,7 +113,7 @@ html, body {
   width: 100%;
   background-color: transparent;
   border: none;
-  /*padding-left: 2rem;*/
+
   color: white;
   padding-bottom: 1rem;
 }
@@ -128,8 +128,7 @@ html, body {
   border-color: gold;
   border-radius: 1rem;
   font-size: 12px;
-  /*padding-top: 2rem;*/
-  /*padding-bottom: 4rem;*/
+
   margin-top: 1rem;
   width: 100%;
   margin-bottom: 1.5rem;
@@ -143,9 +142,6 @@ html, body {
 
 }
 
-
-
-
 .main {
     overflow: scroll;
 }
@@ -158,27 +154,17 @@ html, body {
     overflow: none;
     padding-right: 8rem;
 
-
   }
 
   .section-homepage {
     position: relative;
     width: 100%;
     overflow-x: hidden;
-
     padding-top: 5rem;
-    /*grid-template-columns: 90% auto;
-    grid-template-rows: 100%;*/
-
   }
 
-
   .section-side-image {
-    /*position: absolute;*/
-    /*transform : scale(0.8);*/
 
-    /*top: 60px;*/
-    /*right: -120px;*/
   }
 
   .section-body {
@@ -286,21 +272,67 @@ html, body {
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1023px) {
+  .section {
+    padding-right: 12rem;
+  }
+
   .section-side-image {
     display: block;
     /*position: ;*/
-    position: absolute;
-    transform : scale(0.9);
-
-    top: 60px;
-    right: 150px;
-
-  }
-  .section {
-    padding-right: 12rem;
-
+    transform : scale(0.7);
+    margin-right: 10%;
   }
 
+  .introduction-text {
+    font-size: 0.8rem;
+  }
 
+  .tagline h1 {
+    font-size: 1.6rem;
+  }
+
+
+  .submit-email {
+    width: 70%;
+  }
+
+  .let-me-know-button {
+    margin-bottom: 6rem;
+    margin-top: 3rem;
+    width: 280px;
+    height: 40px;
+  }
+  .submit-email-icon {
+    display: block;
+    position: relative;
+  }
+}
+@media screen and (min-width: 1444px) {
+  .section-side-image {
+    display: block;
+    /*position: ;*/
+
+    transform : scale(1);
+    margin-right: 10%;
+  }
+  .tagline h1 {
+    font-size: 2.2rem;
+  }
+  .introduction-text {
+      font-size: 1rem;
+  }
+  .store-buttons {
+    border-top: none;
+
+    padding-top: 4rem;
+    padding-bottom: 10rem;
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .main-logo {
+    transform: scale(1.2);
+    padding-bottom: 1rem;
+  }
 }
