--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -1,3 +1,10 @@
 .title {
   font-size: 22px;
 }
+
+@media screen and (min-width: 1024px) {
+  .title {
+    font-size: 2rem;
+    padding-bottom: 2rem;
+  }
+}
