--- a/src/pages/howItWorks/howItworks.module.css
+++ b/src/pages/howItWorks/howItworks.module.css
@@ -44,3 +44,19 @@
     margin: 0 auto;
   }
 }
+
+@media screen and (min-width:1024px) {
+  .sectionTitle h1 {
+    font-size: 2rem;
+  }
+  .revealed {
+    font-size: 1rem;
+    padding-bottom: 6rem;
+  }
+}
+
+@media screen and (min-width:1444px) {
+  .revealed {
+    padding-bottom: 7rem;
+  }
+}
