--- a/src/components/carousel.module.css
+++ b/src/components/carousel.module.css
@@ -1,3 +1,7 @@
+.carousel {
+  padding-bottom: 2rem;
+}
+
 .focusGallery {
   display: flex;
   flex-direction: column;
@@ -34,6 +38,7 @@
   width: 160px;
   height: 250px;
   transition: all .4s ease-in-out;
+  transform: scale(1.6);
 }
 
 @media screen and (min-width: 768px) {
