--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -52,6 +52,8 @@
     border-radius: 1rem;
     position: relative;
     margin: 0 auto;
+    margin-top: -30rem;
+    margin-right: 0rem;
   }
 }
 
