--- a/src/layouts/layouts.module.css
+++ b/src/layouts/layouts.module.css
@@ -9,7 +9,7 @@
 .navbarList a {
   color: white;
 
-  font-size: 12px;
+  font-size: 8px;
 
 }
 
@@ -48,12 +48,12 @@
 }
 
 .dot {
-  height: 10px;
-  width: 10px;
+  height: 8px;
+  width: 8px;
   background-color: white;
   border-radius: 10px;
   margin-left: 1px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .navbarList > li:first-of-type:after {
@@ -141,18 +141,18 @@ li:hover {
     left: 0;
     top: 0;
     content: '';
-    border-left: 1px solid white;
+    border-left: 1px solid grey;
     margin-left: 5px;
     height: 100%;
   }
 
   .dot {
-    height: 10px;
-    width: 10px;
-    background-color: white;
+    height: 5px;
+    width: 5px;
+    background-color: grey;
     border-radius: 10px;
-    margin-left: 1px;
-    margin-bottom: 1rem;
+    margin-left: 3px;
+    margin-bottom: 0.3rem;
   }
 
   .navbarList > li:first-of-type:after {
