--- a/src/pages/app.css
+++ b/src/pages/app.css
@@ -8,7 +8,7 @@ html, body {
   padding-bottom: 4rem;
   /*height: 150vh;*/
   /*overflow: hidden;*/
-  padding-right: 8rem;
+  padding-right: 2rem;
   /*overflow-x: hidden;*/
 
 }
@@ -104,8 +104,8 @@ html, body {
   height: 18px;
 
   margin-top: 3rem;
-  position: absolute;
-  display: none;
+  /*position: relative;*/
+  /*display: block;*/
 
 }
 
@@ -113,9 +113,9 @@ html, body {
   width: 100%;
   background-color: transparent;
   border: none;
-
   color: white;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.7rem;
 }
 
 .section-logo {
@@ -131,7 +131,7 @@ html, body {
 
   margin-top: 1rem;
   width: 100%;
-  margin-bottom: 1.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .store-buttons {
@@ -139,7 +139,10 @@ html, body {
   padding-top: 1rem;
   width: 80%;
   margin: 0 auto;
+}
 
+.store-buttons img {
+  transform: scale(1.3);
 }
 
 .main {
@@ -152,7 +155,7 @@ html, body {
     padding-bottom: 4rem;
     /*height: 100vh;*/
     overflow: none;
-    padding-right: 8rem;
+    padding-right: 0rem;
 
   }
 
