--- a/src/pages/app.css
+++ b/src/pages/app.css
@@ -3,52 +3,54 @@ html, body {
   position: relative;
 }
 
+.react-screen {
+  background: #24272C;
+}
+
+.react-screen-progress {
+  left: 32px;
+  display: none;
+}
+
+
 .section {
   text-align: center;
   padding-bottom: 4rem;
-  /*height: 150vh;*/
-  /*overflow: hidden;*/
-  padding-right: 8rem;
-  /*overflow-x: hidden;*/
-
 }
 
 .main-logo{
-  /*width: 80%;*/
   transform: scale(0.5);
 }
-
 
 
 .section-homepage {
   position: relative;
   width: 100%;
   overflow-x: hidden;
-
-  padding-top: 5rem;
-  /*grid-template-columns: 90% auto;
-  grid-template-rows: 100%;*/
-  /*height: 145vh;*/
+  padding-top: 2rem;
+  display: flex;
   overflow: hidden;
 
 }
 
-
 .section-side-image {
-  position: absolute;
+  /*position: absolute;*/
   transform : scale(0.8);
   display: none;
-  top: 60px;
-  right: -120px;
+  flex: 1;
+  /*top: 60px;*/
+  /*right: -120px;*/
 }
 
 .section-body {
   text-align: center;
+  flex: 3;
   /*padding-right : 2rem;*/
 }
 
 .tagline {
   width: 100%;
+  padding: 1rem;
   /*font-size: 12px;*/
 }
 
@@ -63,22 +65,22 @@ html, body {
 
 .introduction-text {
   padding-bottom: 2rem;
+  padding: 1rem;
   width: 100%;
   margin: 0 auto;
   color: white;
-}
-
-.introduction-text {
   padding-bottom: 3rem;
   font-size: 12px;
 }
 
+
 .submit-email {
   display: flex;
   flex-direction: row;
-  height: auto;
-  border-bottom: 2px solid grey;
-  /*width: 40%;*/
+  /*height: auto;*/
+  border-bottom: 1px solid grey;
+  width: 80%;
+  /*padding-left: 0.5rem;*/
   margin : 0 auto;
   color : white;
   /*padding-bottom: 1rem;*/
@@ -102,10 +104,9 @@ html, body {
 .submit-email-icon {
   width: 22px;
   height: 18px;
-
-  margin-top: 3rem;
-  position: absolute;
-  display: none;
+  /*margin-top: 3rem;*/
+  /*position: absolute;*/
+  display: block;
 
 }
 
@@ -115,7 +116,7 @@ html, body {
   border: none;
 
   color: white;
-  padding-bottom: 1rem;
+
 }
 
 .section-logo {
@@ -130,7 +131,7 @@ html, body {
   font-size: 12px;
 
   margin-top: 1rem;
-  width: 100%;
+  width: 80%;
   margin-bottom: 1.5rem;
 }
 
@@ -146,13 +147,40 @@ html, body {
     overflow: scroll;
 }
 
+@media screen and (min-width:425px) {
+  .react-screen-progress {
+    left: 50px;
+    display: none;
+  }
+
+  .tagline h1 {
+    font-size: 20px;
+  }
+
+  .introduction-text {
+    width: 75%;
+  }
+  .let-me-know-button {
+    width: 60%;
+    margin-top: 3rem;
+    margin-bottom: 4rem;
+  }
+
+}
+
 @media screen and (min-width: 768px) {
+
+  .react-screen-progress {
+    left: 50px;
+    display: block;
+
+  }
   .section {
     text-align: center;
     padding-bottom: 4rem;
     /*height: 100vh;*/
     overflow: none;
-    padding-right: 8rem;
+    /*padding-right: 8rem;*/
 
   }
 
@@ -170,6 +198,8 @@ html, body {
   .section-body {
     text-align: center;
     padding-right : 2rem;
+    width: 60%;
+    margin: 0 auto;
   }
 
   .tagline {
@@ -273,33 +303,44 @@ html, body {
 }
 
 @media screen and (min-width: 1023px) {
+  /*global padding rule*/
   .section {
-    padding-right: 12rem;
+    padding-left: 5%;
   }
-
+  /*homepage only*/
+  .section-homepage {
+    padding-left: 20%;
+  }
+  /*side image on Homepage*/
   .section-side-image {
     display: block;
     /*position: ;*/
-    transform : scale(0.7);
-    margin-right: 10%;
+    transform : scale(1.5);
+    margin-top: 10rem;
   }
 
   .introduction-text {
     font-size: 0.8rem;
+    width: 70%;
+    padding-bottom: 1rem;
   }
 
   .tagline h1 {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
-
 
   .submit-email {
     width: 70%;
   }
 
+  .submit-email-form {
+    padding-left: 0;
+
+  }
+
   .let-me-know-button {
-    margin-bottom: 6rem;
-    margin-top: 3rem;
+    margin-bottom: 3rem;
+    margin-top: 1rem;
     width: 280px;
     height: 40px;
   }
@@ -314,7 +355,7 @@ html, body {
     /*position: ;*/
 
     transform : scale(1);
-    margin-right: 10%;
+
   }
   .tagline h1 {
     font-size: 2.2rem;
