--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -5,6 +5,6 @@
 @media screen and (min-width: 1024px) {
   .title {
     font-size: 2rem;
-    padding-bottom: 2rem;
+    /*padding-bottom: 2rem;*/
   }
 }
