--- a/src/components/carousel.module.css
+++ b/src/components/carousel.module.css
@@ -77,6 +77,7 @@
     transition: all 2.4s ease-in-out;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
+    overflow: hidden;
   }
   .carouselControls {
     display: flex;
