--- a/src/components/carousel.module.css
+++ b/src/components/carousel.module.css
@@ -33,8 +33,8 @@
 }
 
 .image {
-  width: 160px;
-  height: 250px;
+  /*width: 160px;*/
+  /*height: 250px;*/
   transition: all .4s ease-in-out;
 }
 
@@ -63,8 +63,8 @@
   }
 
   .image {
-    width: 160px;
-    height: 250px;
+    /*width: 160px;*/
+    /*height: 250px;*/
     transition: all .4s ease-in-out;
   }
 }
@@ -97,7 +97,10 @@
 
 @media screen and (min-width: 1444px) {
   .image {
-    width: 240px;
-    height: 400px;
+    width: 220px;
+    height: 380px;
+  }
+  .focusGallery {
+    height: 550px;
   }
 }
