--- a/src/pages/termsOfUse/termsOfUse.module.css
+++ b/src/pages/termsOfUse/termsOfUse.module.css
@@ -20,7 +20,10 @@
   height: 280px;
   overflow-y: scroll;
   padding-bottom: 1rem;
+  padding-left: 3rem;
+  padding-right: 5rem;
   margin-left: 3rem;
+
 }
 
 
