--- a/src/components/carousel.module.css
+++ b/src/components/carousel.module.css
@@ -4,14 +4,12 @@
   transition: all 2.4s ease-in-out;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  height: 300px;
+  height: 360px;
   overflow: scroll;
 }
 
 .focusGallery img {
-
   transition: all 1s ease-in-out;
-
 }
 
 .imageBody {
@@ -35,6 +33,7 @@
 .image {
   /*width: 160px;*/
   /*height: 250px;*/
+  transform: scale(0.6);
   transition: all .4s ease-in-out;
 }
 
@@ -63,8 +62,8 @@
   }
 
   .image {
-    /*width: 160px;*/
-    /*height: 250px;*/
+    width: 160px;
+    height: 250px;
     transition: all .4s ease-in-out;
   }
 }
@@ -77,7 +76,7 @@
     transition: all 2.4s ease-in-out;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    overflow: hidden;
+    overflow: scroll;
   }
   .carouselControls {
     display: flex;
@@ -90,17 +89,17 @@
     font-size: 0.8rem;
   }
   .image {
-    transform: scale(0.5)
+    /*transform: scale(0.3)*/
   }
 
 }
 
 @media screen and (min-width: 1444px) {
   .image {
-    width: 220px;
-    height: 380px;
+    /*width: 220px;*/
+    /*height: 380px;*/
   }
   .focusGallery {
-    height: 550px;
+    /*height: 550px;*/
   }
 }
