--- a/src/pages/termsOfUse/termsOfUse.module.css
+++ b/src/pages/termsOfUse/termsOfUse.module.css
@@ -81,14 +81,14 @@
     height: 550px;
   }
   .carouselControls {
-    padding-top: 4rem;
+
   }
 }
 
 @media screen and (min-width: 1024px) {
   .textBox {
     width: 100%;
-    height: 400px;
+    height: 40vh;
   }
 
   .title {
@@ -98,7 +98,7 @@
 @media screen and (min-width: 1444px) {
   .textBox {
     width: 100%;
-    height: 600px;
+    /*height: 60;*/
   }
 
   .title {
@@ -106,6 +106,6 @@
   }
 
   .carouselControls {
-    padding-bottom: 6rem;
+
   }
 }
