--- a/src/components/carousel.module.css
+++ b/src/components/carousel.module.css
@@ -26,14 +26,12 @@
   margin : 0 auto;
   transition: all .4s ease-in-out;
   display: none;
-
-
 }
 
 .image {
-  /*width: 160px;*/
-  /*height: 250px;*/
-  transform: scale(0.6);
+  width: 160px;
+  height: 250px;
+  /*transform: scale(0.6);*/
   transition: all .4s ease-in-out;
 }
 
@@ -65,6 +63,12 @@
     width: 160px;
     height: 250px;
     transition: all .4s ease-in-out;
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .focusGallery {
+    height: 350px;
   }
 }
 
