--- a/src/pages/termsOfUse/textCarousel.css
+++ b/src/pages/termsOfUse/textCarousel.css
@@ -35,3 +35,15 @@
     height: 500px;
   }
 }
+
+
+@media screen and (min-width: 1024px) {
+  .carousel-text {
+    font-size: 1rem;
+    line-height: 30px;
+  }
+}
+
+@media screen and (min-width: 1444px) {
+
+}
