--- a/src/components/form.module.css
+++ b/src/components/form.module.css
@@ -66,7 +66,9 @@
     .formContainer {
       /*margin-top: -34rem;
       margin-left: 15rem;*/
-      width: 500px;
+      width: 440px;
+      height: 330px;
+      margin-right: -2rem;
       margin-bottom: 0px;
     }
 
