--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -4,8 +4,26 @@
   margin-bottom: 5px;
 }
 
+.contactContainer {
+  width: 80%;
+  height: 70%;
+  margin: 0 auto;
+  filter: grayscale(90%);
+  background-image: url("./map.png");
+  border-radius: 2rem;
+}
+
 img {
   margin-bottom: 0;
+}
+
+
+
+@media screen and (min-width: 768px) {
+  .contactContainer {
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 1024px) {
