--- a/src/pages/termsOfUse/textCarousel.css
+++ b/src/pages/termsOfUse/textCarousel.css
@@ -26,13 +26,32 @@
 
 .carousel .slide {
   overflow: scroll;
-  height: 300px;
+  height: 70vh;
+}
+
+.control-arrow.control-next {
+  height: 400px;
+  color: white;
+  margin-top: 3rem!important;
+  display: block!important;
+}
+
+.control-arrow.control-prev {
+  height: 400px;
+  color: white;
+  margin-top: 3rem!important;
+  display: block!important;
+}
+
+.control-arrow.control-next:active {
+  height: 400px;
+  border: none;
 }
 
 @media screen and (min-width: 768px) {
   .carousel .slide {
     overflow: scroll;
-    height: 500px;
+    height: 70vh;
   }
 }
 
