--- a/src/pages/homepage/homepage.module.css
+++ b/src/pages/homepage/homepage.module.css
@@ -7,20 +7,16 @@
 }
 
 .submit {
-  top: 60px;
-  right: 30%;
-  position: relative;
-
+  color: black;
   background-color: gold;
-  width: 200px;
+  width: 100px;
   height: 40px;
   border: 1px solid gold;
-  border-radius: 2rem;
-
+  border-radius: 5px;
+  font-size: 12px;
 }
 
 .submitEmailInput {
-  width: 50%;
   background-color: transparent;
   border: none;
   padding-left: 1rem;
@@ -29,7 +25,8 @@
 
 @media screen and (min-width: 768px) {
   .submit {
-    right: 28%;
+    width: 140px;
+    height: 40px;
   }
 }
 
