--- a/src/pages/contact/contact.module.css
+++ b/src/pages/contact/contact.module.css
@@ -22,8 +22,10 @@ img {
     align-items: center;
     background-image: url("./map.png");
     background-position: center;
-    filter: grayscale(60%);
+    /* filter: grayscale(60%); */
     border-radius: 1rem;
+    width: 80%;
+    height: 80vh;
   }
 }
 
